fix(styles): add z-index to fix issue #56

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ header h1 {
   justify-content: space-between;
   height: 50px;
   margin-bottom: 20px;
+  z-index: 1;
 }
 
 .navi_bar img {
